--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Custom
+.env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -121,3 +124,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
